# SistemasDistribuidos-2026-2

./: README.md
Practica1-Multiprocesamiento/multiproc/: Cargo.toml  Readme.md
Practica1-Multiprocesamiento/multiproc/src/: main.rs
Practica2-ClienteServidor/cliente/: Cargo.toml
Practica2-ClienteServidor/cliente/src/: main.rs
Practica2-ClienteServidor/servidor/: Cargo.toml
Practica2-ClienteServidor/servidor/src/: main.rs
Practica3-NClientes1Servidor/: Readme.md
Practica3-NClientes1Servidor/nclientes1servidor/: Cargo.toml  index.html
Practica3-NClientes1Servidor/nclientes1servidor/src/: client.rs  server.rs
